feat(ui): Building LanguageSwitcher and ToggleSwitcher component

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -13,10 +13,12 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
+  /* :root {
     --foreground: #ededed;
-  }
+  } */
 }
+
+@custom-variant dark (&:where(.dark, .dark *));
 
 body {
   color: var(--foreground);
