--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -10,6 +10,47 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --breakpoint-xs: 480px;
+  --breakpoint-sm: 640px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 1024px;
+  --breakpoint-xl: 1280px;
+  --breakpoint-2xl: 1360px;
+}
+
+@layer utilities {
+  .\@container {
+    margin-inline: auto;
+    padding-inline: 2rem;
+
+    @media (width >=--theme(--breakpoint-xs)) {
+      max-width: 480px;
+    }
+
+    @media (width >=--theme(--breakpoint-sm)) {
+      max-width: 640px;
+    }
+
+    @media (width >=--theme(--breakpoint-md)) {
+      max-width: 768px;
+      padding-inline: 2rem;
+    }
+
+    @media (width >=--theme(--breakpoint-lg)) {
+      max-width: 1024px;
+      padding-inline: 3rem;
+    }
+
+    @media (width >=--theme(--breakpoint-xl)) {
+      max-width: 1280px;
+      padding-inline: 4rem;
+    }
+
+    @media (width >=--theme(--breakpoint-2xl)) {
+      max-width: 1360px;
+      padding-inline: 0;
+    }
+  }
 }
 
 @media (prefers-color-scheme: dark) {
